# pffsfat

./: CLAUDE.md  Makefile  README.md  package.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/core/: config.py
docs/: DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json
k8s/base/: deployment.yaml  kustomization.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/postgres/database/in-cluster/: postgres-secret.yaml
scripts/: build-images.sh  deploy.sh  dev-db.sh  push-images.sh  undeploy.sh
